Se modifico el archivo introduccion.html

--- a/introduccion.html
+++ b/introduccion.html
@@ -18,48 +18,28 @@
     	</nav>
     	<section id="contenido">
     		<h1>MI PROYECTO DE TESIS</h1>
-    		<cite>Por Cristian Valdivia</cite>
+    		<cite>Por Maximiliano Muñoz</cite>
     		<hr>
     		<h2>Introducción</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    		<p>
+            En la actualidad las instituciones de educación superior, satisfacen la necesidad de un gran número de estudiantes, los cuales buscan obtener éxito escolar. Estos jóvenes se han encontrado con diferentes factores que intervienen negativamente en su trayectoria escolar como son el bajo rendimiento académico y la deserción escolar [UABC, 2003].</p>
+    		<p>Es así como las grandes tasas de deserción escolar  debido a abandono de los estudios, las bajas voluntarias y el bajo rendimiento académico son problemas que comparten la mayoría de las instituciones de educación superior.  Este último se ha convertido en uno de los aspectos que más interesan al proceso de enseñanza aprendizaje. Por ello el rendimiento académico es concedido actualmente como un problema multifactorial  en el que intervienen diversas variables, tales como: estilo docente, tipo de asignatura, entorno familiar, apoyo institucional, motivación [García, 2003].
+
+            Actualmente, en la sociedad del conocimiento donde la tendencia global se basa en la creación y gestión del conocimiento, se requiere de metodologías acordes en la construcción del aprendizaje, donde el estudiante debe ser un ente activo, crítico y constructor de sus conocimientos, apoyado, del papel del educador, como un mediador y orientador que genera estrategias acordes para afianzar procesos de trabajo individual y colaborativo. 
+
+            Además el educador debe mantener la preocupación sobre la evolución del alumno, analizando y registrando, cada uno de los avances de este a lo largo de su formación, es así como nace la preocupación de realizar el seguimiento académico.</p>
+
+    		<p>Hoy en día  la información juega un rol importante en el correcto funcionamiento de una institución, esta debe ser analizada y usada de forma correcta. Esto no es diferente dentro del mundo educacional ya que todos deben saber cómo usar los datos para obtener una imagen clara de lo que ocurre en la sala de Clases. Es así como bajo esta premisa nace el concepto de Sala de datos.
+
+En palabras simples, una sala de datos es un área (sala de clases, sala de profesores, sala de reuniones) para mostrar, analizar y utilizar la información. Las salas de datos mantienen la información visible, no hay que buscarla en un cuaderno o carpeta para encontrarla . El objetivo de instalar las salas de datos es facilitar el uso de la información para aumentar el logro de los aprendizajes en los estudiantes y para promover averiguaciones colaborativas entre directivos y docentes o entre docentes.</p>
+
+<p>Este proyecto aborda el desafío, planteado por CMD-UDA para la realización de un sistema que pretenda afrontar de mejor manera el análisis de la información, esto mediante el desarrollo de un sistema web el cual conste con una interfaz amigable con el usuario, ordenada, y permita acceder de forma mucho más rápida a la información obtenida por el profesor.
+
+La principal característica de los sistemas actuales es permitir captar datos (apoyo netamente a los procesos operativos), pero  no logran hacer partícipe a estos en el proceso educacional para así entregarles un real valor que los transforme en información que otorgue conocimiento y permita aplicar  mejoras en los proceso. El permitir a la información ser parte del proceso entrega al docente la capacidad de detectar fallas en el momento preciso (bajas calificaciones, falta de comprensión en un tema) sin tener la necesidad de esperar a la finalización del periodo académico para realizar estas observaciones, dando así a este  la capacidad de reacción para asistir a los participantes del proceso actual y no solo para mejoras de planificaciones futuras.
+
+Este sistema a desarrollar deberá ser capaz de entregar estadísticas basadas en calificaciones, contenido, y estará orientada a apoyar las decisiones del docente y lograr determinar entre algunas cosas cómo mejorar la enseñanza y el aprendizaje y cuántos de nuestros alumnos están obteniendo logros y en qué áreas se presentan los mayores desafíos. De esta forma permitir a los interesados monitorear y entregar un mejor seguimiento académico a los alumnos, esto cobra vital importancia, sobre todo en aquellos casos desfavorecidos académicamente
+</p>
+    		
     		<hr>
     		<cite>Ejemplo del uso de Git</cite>
     	</section>
