--- a/instrucciones.html
+++ b/instrucciones.html
@@ -14,6 +14,7 @@
     			<li><a href="desarrollo.html">Desarrollo</a></li>
     			<li><a href="referencias.html">Referencias</a></li>
     			<li><a class="prueba" href="instrucciones.html">Instrucciones</a></li>
+                <li><a href="pasos.html">Pasos</a></li>
     		</ul>
     	</nav>
     	<section id="contenido">
