Se modifico pasos.html

--- a/pasos.html
+++ b/pasos.html
@@ -35,7 +35,8 @@
             <p>Se vuelve a la rama master con git checkout master</p>
             <p> Se mezclan las ramas con git merge diseno</p>
             <p>Se crea el archivo pasos.html</p>
-            <p>Se aplica git add pasos.html, luego git commit -m "Se creo el archivo pasos.html"</p>
+            <p>Se aplica git add pasos.html, luego git commit -m "Se creo el archivo pasos.html y se modifico instrucciones.html"</p>
+            <p>Se sube el archivo con git push githubmaster</p>
 
 
     		<hr>      
