Se modifico pasos.html

--- a/pasos.html
+++ b/pasos.html
@@ -22,7 +22,7 @@
     		<hr>
     		<h2>Pasos</h2>
             <p>Se clona el archivo con git clone https://github.com/medmunval/prueba-git.git</p>
-    		<p>3.- Se crea el archivo .gitignore y en su interior se escribe *.jpg, luego se aplica git add .git ignore, luego git commit -m "Se creo el archivo .gitignore para omitir las imagenes con exeension jpg"
+    		<p> Se crea el archivo .gitignore y en su interior se escribe *.jpg, luego se aplica git add .git ignore, luego git commit -m "Se creo el archivo .gitignore para omitir las imagenes con exeension jpg"
             </p>
             <p>Se modifico el archivo introduccion.html, luego se aplica git add introduccion .html y git commit -m "Se modifico introduccion.html"</p>
             <p>Se modifico el archivo marco_teorico.html, luego se aplica git add marco_teorico .html y git commit -m "Se modifico marco_teorico.html"</p>
@@ -36,7 +36,7 @@
             <p> Se mezclan las ramas con git merge diseno</p>
             <p>Se crea el archivo pasos.html</p>
             <p>Se aplica git add pasos.html, luego git commit -m "Se creo el archivo pasos.html y se modifico instrucciones.html"</p>
-            <p>Se sube el archivo con git push github master</p>
+            <p>Se sube el archivo con git push origin master</p>
 
 
     		<hr>      
